debugged bootstrap css issues, now responsive on mobile, still debugging edit post ans delete post features, these still do not work correctly

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@
 body {
     font-family: 'Cutive Mono', monospace;
     font-size: 16px;
-    width: 800px;
     margin: 0 auto;
     background-color: #F4F7ED;
 }
